# Pocket-graph

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.hf  LICENSE  README-zh.md  README.md  README_HF.md  RELEASE.md  SECURITY.md  blog_hotpotqa_optimization.md  docker-build-push.sh  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  start_freellm_cn.bat  start_freellm_cn.sh  start_web.bat  start_webui.bat  start_webui.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.md
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  publish-pypi.yml  publish.yml  security.yml
PocketGraphRAG/: __init__.py  __main__.py  answer_verifier.py  api_server.py  app.py  benchmark.py  benchmark_adapters.py  benchmark_perf.py  build_index.py  cli.py  community_summarizer.py  concurrency.py  config.py  conversation.py  data_importer.py  data_processor.py  drift_search.py  eval_harness.py  evaluate.py  generate_demo_images.py  hyde.py  incremental_index.py  kg_extractor.py  kg_reasoning.py  llm.py  llm_cache.py  logging_config.py  multihop.py  multimodal.py  prompts.yaml  query_router.py  rag_system.py  run_benchmark.py  schema.py  settings_manager.py  setup_wizard.py  tracing.py  vlm_extractor.py  webapp.py
PocketGraphRAG/benchmark/: movie_kg_v1.json
PocketGraphRAG/core/: __init__.py  hybrid_retriever.py  reranker.py
PocketGraphRAG/core/storages/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py  in_memory_graph.py  json_kv_store.py  neo4j_store.py  pgvector_store.py
PocketGraphRAG/data/: entity_aliases.json
PocketGraphRAG/tests/: __init__.py  conftest.py  test_answer_formatting.py  test_api_bugfixes_v037.py  test_async_extraction.py  test_async_llm.py  test_auth_role_llm.py  test_benchmark.py  test_benchmark_adapters.py  test_chunking_strategies.py  test_citation.py  test_cli_e2e.py  test_community_hierarchical.py  test_conversation.py  test_cross_lingual.py  test_data_importer.py  test_data_processor.py  test_document_preview.py  test_drift_search.py  test_eval_harness.py  test_gleaning.py  test_graph_algorithms_advanced.py  test_incremental_index.py  test_kg_extractor_v2.py  test_kg_reasoning.py  test_llm.py  test_multi_model_fusion.py  test_multihop.py  test_multimodal.py  test_multimodal_parsing.py  test_neo4j_pgvector.py  test_observability_softdep.py  test_rag_system_e2e.py  test_reranker_kg_aware.py  test_rrf_fusion.py  test_schema.py  test_setup_wizard.py  test_sitemap_rss_import.py  test_storages.py  test_tracing.py  (+4 more)
PocketGraphRAG/tools/: __init__.py  capture_webui_demo.py
bench_data/: eval_merged.py  hotpotqa_50.json  hotpotqa_50_corpus.txt  hotpotqa_50_triples_deepseekv3.txt  hotpotqa_50_triples_gleaning1.txt  hotpotqa_50_triples_merged.txt  hotpotqa_50_triples_qwenmax_g2.txt  hotpotqa_deepseekv3_results.json  hotpotqa_eval_results_topk5.json  hotpotqa_failure_analysis.json  hotpotqa_final_results.json  hotpotqa_gleaning1_eval_results.json  hotpotqa_gleaning_sweep_results.json  hotpotqa_merged_results.json  hotpotqa_optimal_results.json  hotpotqa_qwenmax_g2_results.json  hotpotqa_regression_check.json  hotpotqa_sweep_phase2_results.json  lightrag_results.json  movie_baseline_results.json
bench_data/hf_cache/hotpot_qa/distractor/0.0.0/1908d6afbbead072334abe2965f91bd2709910ab/: dataset_info.json
bench_data/hotpotqa_index_gleaning1/: chunks.json  embeddings.npy  entity_names.json  faiss.index  metadatas.json  relation_names.json  texts.json  triples_manifest.json
bench_data/hotpotqa_index_merged/: chunks.json  embeddings.npy  entity_names.json  faiss.index  metadatas.json  relation_names.json  texts.json  triples_manifest.json
bench_data/hotpotqa_index_qwenmax_g2/: chunks.json  embeddings.npy  entity_names.json  faiss.index  metadatas.json  relation_faiss.index  relation_names.json  texts.json  triples_manifest.json
deploy/: README.md
deploy/helm/pocketgraphrag/: Chart.yaml  values.yaml
deploy/helm/pocketgraphrag/templates/: NOTES.txt  deployment.yaml
deploy/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs/: architecture.md  awesome_list_submission.md  blog_technical_zh.md  changelog.md  cli.md  data-import.md  deployment.md  evaluation.md  faq.md  getting-started.md  graphrag_gap_analysis.md  index.md  installation.md  python-api.md  quickstart.md  rest-api.md  search-modes.md  xiaohongshu_post.md
examples/: call_rest_api.py  compare_search_modes.py  extract_custom_data.py
examples/cat_encyclopedia/data/: cat_kg_triples.txt
examples/cat_encyclopedia/docs/: cat_breeds.md  cat_care.md  cat_health.md
examples/movie_kg/: README.md
examples/movie_kg/data/: movie_knowledge_graph_triples.txt
examples/rice/: rice_disease_benchmark.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/kg/: ForceGraph.tsx  GraphSidePanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  theme.tsx  utils.ts
frontend/src/pages/: Analytics.tsx  Chat.tsx  Documents.tsx  KnowledgeGraph.tsx  Settings.tsx
frontend/src/types/: api.ts
huggingface_space/: README.md  app.py  requirements.txt
